freest/test/prog/Invalid/Typing/TypeConsOutOfScope/TypeConsOutOfScope.fst
module TypeConsOutOfScope where

type T : *T
type T = U